# template-course-website

./: .gitignore  .gitmodules  README.md  course-data-ethics.cabal  default.nix  index.html  index.md  template-course-website.cabal
.github/workflows/: main.yml
assignments/: 99-final-project.html
content/: .dir-locals.el  chicago-author-date.csl  custom-chicago.csl  index.md  references.bib
content/static/: thisweek.js
src/: Main.hs
