cabal-version: 2.4
name: template-course-website
version: 0.1.0.0
license: BSD-3-Clause
maintainer: jon.reeve@gmail.com
author: Jonathan Revee
category: Web

executable template-course-website
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    other-modules:
        PandocSidenote
    build-depends:
        base,
        blaze-html,
        aeson,
        clay,
        -- haskell-language-server,
        lucid,
        filepath,
        mtl,
        pandoc,
        pandoc-types,
        relude,
        shake,
        text,
        with-utf8,
        wai-app-static,
        warp
        -- wai-middleware-static,
        -- wai-app-static
